--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "from db.templates import Templates\n",
-    "from pandas import DataFrame"
+    "import pandas as pd"
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -52,37 +52,278 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>numbers</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>1597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>2584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>4181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>6765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>10946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>17711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>28657</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   numbers\n",
-       "0        2\n",
-       "1        4"
+       "     0      1\n",
+       "0    1      3\n",
+       "1    2      5\n",
+       "2    3      8\n",
+       "3    4     13\n",
+       "4    5     21\n",
+       "5    6     34\n",
+       "6    7     55\n",
+       "7    8     89\n",
+       "8    9    144\n",
+       "9   10    233\n",
+       "10  11    377\n",
+       "11  12    610\n",
+       "12  13    987\n",
+       "13  14   1597\n",
+       "14  15   2584\n",
+       "15  16   4181\n",
+       "16  17   6765\n",
+       "17  18  10946\n",
+       "18  19  17711\n",
+       "19  20  28657"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mod2 = templates.fromSqlFile('mod.tpl.sql', [str(2)])\n",
-    "numbers_df = DataFrame(mod2, columns=[\"numbers\"])\n",
-    "numbers_df"
+    "resp = templates.fromSqlFile(\"fib-type.tpl.sql\", (20, [3, 5]))\n",
+    "df = pd.DataFrame(resp)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'butt'), (2, 'lolo'), (3, 'lolo')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "\n",
+    "conn = psycopg2.connect(\n",
+    "    **{\n",
+    "        \"host\": \"sql-algo-workshop-postgres\",\n",
+    "        \"port\": 5432,\n",
+    "        \"dbname\": \"experiments\",\n",
+    "        \"user\": \"postgres\",\n",
+    "        \"password\": \"root\",\n",
+    "    }\n",
+    ")\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(\n",
+    "    \"\"\"\n",
+    "    DROP TABLE IF EXISTS \"cats\";\n",
+    "\n",
+    "    CREATE TABLE \"cats\" (\n",
+    "        \"id\" SERIAL,\n",
+    "        \"name\" VARCHAR(30)\n",
+    "    )\n",
+    "    ;\n",
+    "\"\"\"\n",
+    ")\n",
+    "cur.executemany(\n",
+    "    \"\"\"INSERT INTO \"cats\" VALUES (%(id)s, %(name)s);\"\"\",\n",
+    "    [\n",
+    "        {\n",
+    "            \"id\": 1,\n",
+    "            \"name\": \"butt\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 2,\n",
+    "            \"name\": \"lolo\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"id\": 3,\n",
+    "            \"name\": \"lolo\",\n",
+    "        },\n",
+    "    ],\n",
+    ")\n",
+    "# conn.commit()\n",
+    "# response = cur.fetchall()\n",
+    "cur.close()\n",
+    "# response\n",
+    "# response\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(\"\"\"SELECT * FROM \"cats\"; \"\"\", {})\n",
+    "resp = cur.fetchall()\n",
+    "cur.close()\n",
+    "conn.close()\n",
+    "resp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, datetime.datetime(2013, 2, 1, 12, 11, tzinfo=datetime.timezone.utc))]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "import psycopg2\n",
+    "\n",
+    "conn = psycopg2.connect(\n",
+    "    **{\n",
+    "        \"host\": \"sql-algo-workshop-postgres\",\n",
+    "        \"port\": 5432,\n",
+    "        \"dbname\": \"experiments\",\n",
+    "        \"user\": \"postgres\",\n",
+    "        \"password\": \"root\",\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(\n",
+    "    \"\"\"\n",
+    "    DROP TABLE IF EXISTS \"with_date\";\n",
+    "\n",
+    "    CREATE TABLE \"with_date\" ( \n",
+    "        \"id\" SERIAL, \n",
+    "        \"date\" TIMESTAMPTZ\n",
+    "    )\n",
+    "    ;\n",
+    "\"\"\"\n",
+    ")\n",
+    "cur.executemany(\n",
+    "    'INSERT INTO \"with_date\" (\"date\") VALUES (%(date_value)s)',\n",
+    "    [\n",
+    "        {\n",
+    "            \"date_value\": datetime.datetime(2013, 2, 1, 12, 11),\n",
+    "        }\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "cur.close()\n",
+    "cur = conn.cursor()\n",
+    "cur.execute('SELECT * FROM \"with_date\";')\n",
+    "resp = cur.fetchall()\n",
+    "cur.close()\n",
+    "conn.close()\n",
+    "resp"
    ]
   }
  ],
@@ -102,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4,
   "vscode": {
